# lzw-assignment

./: .bettercodehub.yml  .gitignore  .gitlab-ci.yml  .travis.yml  CMakeLists.txt  Makefile  README.md  README.org  appveyor.yml  circle.yml
.circleci/: config.yml
doc/: Doxyfile
docs/: Doxyfile.in
includes/: getopt.c  getopt.h
src/: bitpack.cc  bitpack.hh  common.cc  common.hh  compress.cc  compress.hh  io.cc  io.hh  main.cc  uncompress.cc  uncompress.hh  utf8.cc  utf8.hh
